// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card renders a card with a primary title 1`] = `
<div
  className="card"
>
  Card Title
</div>
`;

exports[`Card renders a card with a primary title and a divider 1`] = `
<div
  className="card"
>
  Card Title
  <div
    className="card-divider"
  />
</div>
`;

exports[`Card renders an empty card 1`] = `
<div
  className="card"
/>
`;
